@@ -423,6 +423,12 @@ class TestRDocMarkupToHtml < RDoc::Markup::FormatterTestCase
     assert_equal "\n<p>C</p>\n", result
   end
 
+  def test_convert_TIDYLINK_footnote
+    result = @to.convert 'text{*1}[rdoc-label:foottext-1:footmark-1]'
+
+    assert_equal "\n<p>text<a id=\"footmark-1\" href=\"#foottext-1\">*1</a></p>\n", result
+  end
+
   def test_convert_TIDYLINK_rdoc_label
     result = @to.convert '{foo}[rdoc-label:foottext-1]'
 
